<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".VerifyMoblieNumber">

    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/sign_up_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/mobile_verify_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <EditText android:id="@+id/verify_mobileNumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_verify_mobile_number"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/resend"
                style="?android:textAppearanceSmall"
                android:layout_width="fill_parent"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_resend"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout android:id="@+id/sms_code_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText android:id="@+id/sms_code"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_weight="2"
                    android:hint="@string/prompt_sms_code"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:layout_marginTop="16dp"
                    android:maxLines="1"
                    android:singleLine="true" />

                <Button android:id="@+id/verify"
                    style="?android:textAppearanceSmall"
                    android:layout_width="fill_parent"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:inputType="number"
                    android:text="@string/action_active_mobile"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:id="@+id/verify_skip"
                android:text="@string/action_verify_skip"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
